fix: added collapsed state

--- a/src/styles/block-design-system.scss
+++ b/src/styles/block-design-system.scss
@@ -76,22 +76,4 @@ $block-design-system: (
 	 */
 	subtitle-size: 16px,
 	subtitle-color: #39414d,
-<<<<<<< HEAD
-
-	/**
-	 * Separators
-	 */
-	separator-color: #fff,
-
-	/**
-	 * Dividers
-	 */
-	divider-color: #ddd,
-
-	/**
-	 * Accordions
-	 */
-	accordion-border-color: #dfdad1,
-=======
->>>>>>> a3514c4979ba5b24854178dfa56e20437b097b69
 );
